kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.54.0.0/16
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.k8s.chnet
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: http
  tls:
  - hosts:
    - dashboard.k8s.chnet
    secretName: ingress-tls
